# wyly

./: README.md
.github/workflows/: app-web-test.yaml  brain-demo-deploy-dev.yaml  brain-demo-deploy-dev.yml  brain-demo-test.yaml  brain-deploy-dev.yaml  brain-infra-deploy-dev.yaml  brain-infra-test.yaml  brain-test.yaml  dummy-ci.yaml
app-web/: .gitignore  Makefile  README.md  pubspec.yaml
app-web/android/app/: build.gradle
app-web/assets/: sample.env
app-web/ios/Runner/: Info.plist
app-web/ios/Runner.xcodeproj/: project.pbxproj
app-web/lib/: main.dart
app-web/lib/screen/: login_screen.dart  sign_up_screen.dart
app-web/lib/service/: env_service.dart
app-web/lib/widget/: animated_progress_indicator.dart
app-web/test/: widget_test.dart
app-web/test/service/: env_service_test.dart
app-web/web/: index.html  manifest.json
app-web/windows/: CMakeLists.txt
app-web/windows/runner/: Runner.rc  main.cpp
brain/: Dockerfile  Makefile  README.md  cloudbuild_dev.yaml  docker-compose.yaml  mypy.ini  pylintrc  pyproject.toml  tox.ini
brain-demo/: .firebaserc  .gitignore  README.md
brain-demo/functions/: .eslintrc.js  package-lock.json
brain-demo/src/: .eslintrc.js  index.d.ts  nuxt.config.js  package-lock.json  package.json
brain-infra/: README.md  main.tf  service-account.tf  variables.tf
brain/app/: main.py
brain/app/gcp/: vision.py
brain/app/service/: identifier.py  security.py
brain/docs/: swagger.yaml
brain/tests/gcp/: test_vision.py
brain/tests/service/: conftest.py  test_identifier.py  test_security.py
(+9 files in other folders)
